//
// Created by Filipe on 12/12/2025.
//

#ifndef LETI_ESOFT_25_26_B1_HEALTHCARECENTER_H
#define LETI_ESOFT_25_26_B1_HEALTHCARECENTER_H

#include "headers/domain/model/Facility.h"

class HealthcareCenter : public Facility {
public:
    using Facility::Facility; // reuse base constructor
};

#endif //LETI_ESOFT_25_26_B1_HEALTHCARECENTER_H
