@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle
hide methods



class Vaccine {
    - commercial_name
    - brand
    - technology
}

class Vaccine_Type {
    - type_code
    - disease
    - short_description
}

class Facility {
    - name
    - postal_adress
    - phone_number
    - email
    - website_adress
    - opening_hours
    - closing_hours
    - max_vaccines_per_hour
}

class Employee {
    - Employee_id
    - name
    - postal_adress
    - phone_number
    - email
    - role
}


class SNS_User {
    - name
    - date_birth
    - sex
    - postal_adress
    - phone_number
    - email
    - CC_number
    - SNS_user_number
}



class Vaccination_Appointment {
    - facility
    - status
    - date
    - time
}

class Current_Outbreak {
    - disease
    - start_date
    - end_date
    - is_current
}

class Community_Mass_Vaccination_Center {
}

class Healthcare_Center {
}

class Nurse {

}

class Receptionist {

}

class Event {
    - user_arrival_time
    - brand
    - lot_number
    - reaction_notes
}

class Administrator {
    - name
    - email
    - phone_number
}

class Vaccine_Certificate {
    - issue_day
}

Employee <|-- Nurse
Employee <|-- Receptionist

Facility <|-- Community_Mass_Vaccination_Center
Facility <|-- Healthcare_Center

Employee "1" -up-- "0..*" Facility : works in >

Administrator "1" -right-- "1..*" Employee: register >

Administrator "1" -down-- "1..*" Vaccine: register >

Administrator "1" -right-- "1..*" Facility: register >

Administrator "1" -down-- "1..*" Vaccine_Type: specify a >

SNS_User "1" -down-- "0..1" Vaccination_Appointment: makes a >



Current_Outbreak "1" -left-- "1" Vaccine_Type: correlated >

Vaccine "0..*" -right-- "1" Vaccine_Type: has >

Nurse "1" -down-- "0..*" Vaccine_Certificate: creates >

Vaccine_Certificate "0..1" -down-- "1" Event: issued for >

Vaccination_Appointment "0..*" -down-- "1" Vaccine_Type: correlated >

Vaccination_Appointment "1" -up-- "0..1" Event: generates >

Event "0..*" -right-- "1" SNS_User: belongs >

Event "1" -down-- "1" Vaccine_Type:has >

SNS_User "1"  -left-- "0..1" Vaccine_Certificate: has >




@enduml